--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+ <!DOCTYPE html>
+ <html>
+ 	<head>
+ 		<title>I</title>	
+ 		<link rel="stylesheet" type="text/css" href="/public/css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet' type='text/css'>	</head> 
+ 	<body>
+ 		<div id = "header-banner">
+ 			<div id = "intro-svg"></div> 
+ 		</div> 
+ 	</body>
+ 	<script src = "/public/javascripts/perlin.js"></script>
+   	<script src="/public/javascripts/d3/d3.min.js"></script>
+   	<script src="/public/javascripts/jquery.min.js"></script>
+   	<script src="public/javascripts/intro.js"></script> 
+ </html>
