--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 						<div class="height-1 tile"> 
 							<span class="across-bottom line blue" id="a1"></span>
 							<span class="up-right line blue" id="a2"></span>
-							<h1 class="underline-orange"> The Refugee Project </h1>  
+							<h1 class="underline-orange">  Project #1 </h1>  
 						</div>
 						<div class="height-2 tile"> 
 							<span class="across-top line orange" id="b1"></span>
 							<span class="down-right line orange" id="b2"></span>
-							<h1 class="underline-blue"> Regularity &amp; Randomness </h1>
+							<h1 class="underline-blue"> Project #2 </h1>
 						</div>
 					</div>
 					<div class="column size-1of3 item">
@@ -39,25 +39,25 @@
 							<span class="down-left line orange" id="c1"></span>
 							<span class="across-bottom line orange" id="c2"></span>
 							<span class="up-right line orange" id="c3"></span>
-							<h1 class="underline-blue"> Interactive WebVR Experiment </h1>
+							<h1 class="underline-blue"> Project #3 </h1>
 						</div>
 						<div class="height-1 tile">
 							<span class="up-left line blue" id="d1"></span>
 							<span class="across-top line blue" id="d2"></span>
 							<span class="down-right line blue" id="d3"></span>
-							<h1 class="underline-orange"> WebVR Doodles </h1>
+							<h1 class="underline-orange"> Project #4 </h1>
 						</div>
 					</div>
 					<div class="column size-1of3 item">
 						<div class="height-1 tile">
 							<span class="down-left line blue" id="e1"></span>
 							<span class="across-bottom line blue" id="e2"></span>
-							<h1 class="underline-orange"> Jell, Roll!</h1> 
+							<h1 class="underline-orange"> Project #5 </h1> 
 						</div>
 						<div class="height-2 tile">
 							<span class="up-left line orange" id="f1"></span>
 							<span class="across-top line orange" id="f2"></span>
-							<h1 class="underline-blue"> Doodles! </h1> 
+							<h1 class="underline-blue"> Project #6 </h1> 
 						</div>
 					</div>
 				</div>
