--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html>
  	<head>
- 		<title></title>	
+ 		<title>Hello</title>	
  		<link rel="stylesheet" type="text/css" href="/public/javascripts/fullpage.js/jquery.fullPage.css"/>
  		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  		<script type="text/javascript" src="/public/javascripts/fullpage.js/jquery.fullPage.js"></script> 
@@ -10,28 +10,35 @@
  		<link rel="stylesheet" type="text/css" href="/public/css/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Pavanam" rel="stylesheet">
 	</head> 
  	<body>
  		<div id = "fullpage"> 
 	 		<div id="div1" data-anchor="page1" class = "section">
-	 			<div id = "intro-svg" class="svg-container"></div>
-	 			<div id="intro-paragraph">  </div>  
+	 			<div id = "intro-svg" class="svg-container"></div> 
 	 			<a href="#page2"> 
-	 				<div id = "arrow-svg" class = "arrow bounce"></div>  
+	 				<div class = "arrow bounce arrow-svg"></div>  
+	 			</a>
+	 		</div> 
+	 		<div id="div3" data-anchor="page3" class="section"> 
+	 				<!-- lets keep with the line theme -->
+	 				<div id="intro-paragraph">hey.</div>  
+	 			<a href="#page3"> 
+	 				<div class = "arrow bounce arrow-svg"></div>  
 	 			</a>
 	 		</div> 
 	 		<div id="div2" data-anchor="page2" class = "section"> 
 	 			<div id="grid" data-columns>
 					<div class="column size-1of3">
-						<div class="height-1 tile"> 
+						<div class="height-1 tile" onclick="location.href='newurl.html'"> 
 							<span class="across-bottom line blue" id="a1"></span>
 							<span class="up-right line blue" id="a2"></span>
-							<h1 class="underline-orange">  Project #1 </h1>  
+							<h1 class="underline-orange"> The Refugee Project </h1>  
 						</div>
 						<div class="height-2 tile"> 
 							<span class="across-top line orange" id="b1"></span>
 							<span class="down-right line orange" id="b2"></span>
-							<h1 class="underline-blue"> Project #2 </h1>
+							<h1 class="underline-blue"> Regularity &amp; Randomness </h1>
 						</div>
 					</div>
 					<div class="column size-1of3 item">
@@ -39,25 +46,25 @@
 							<span class="down-left line orange" id="c1"></span>
 							<span class="across-bottom line orange" id="c2"></span>
 							<span class="up-right line orange" id="c3"></span>
-							<h1 class="underline-blue"> Project #3 </h1>
+							<h1 class="underline-blue"> Interactive WebVR Experiment </h1>
 						</div>
 						<div class="height-1 tile">
 							<span class="up-left line blue" id="d1"></span>
 							<span class="across-top line blue" id="d2"></span>
 							<span class="down-right line blue" id="d3"></span>
-							<h1 class="underline-orange"> Project #4 </h1>
+							<h1 class="underline-orange"> WebVR Doodles </h1>
 						</div>
 					</div>
 					<div class="column size-1of3 item">
 						<div class="height-1 tile">
 							<span class="down-left line blue" id="e1"></span>
 							<span class="across-bottom line blue" id="e2"></span>
-							<h1 class="underline-orange"> Project #5 </h1> 
+							<h1 class="underline-orange"> Jell, Roll!</h1> 
 						</div>
 						<div class="height-2 tile">
 							<span class="up-left line orange" id="f1"></span>
 							<span class="across-top line orange" id="f2"></span>
-							<h1 class="underline-blue"> Project #6 </h1> 
+							<h1 class="underline-blue"> Doodles! </h1> 
 						</div>
 					</div>
 				</div>
@@ -71,11 +78,10 @@
 
 	   	$(document).ready(function() {
 		    $('#fullpage').fullpage({
-		    		anchors:['page1', 'page2']
+		    		anchors:['page1', 'page2','page3']
 		    	});
 
 		}); 
-
 
 
    	</script> 
