--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
  		<script type="text/javascript" src="/public/javascripts/salvattore.min.js"></script>
 
  		<link rel="stylesheet" type="text/css" href="/public/css/style.css">
-		<link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Pavanam" rel="stylesheet">
 	</head> 
@@ -30,25 +29,25 @@
 	 		<div id="div2" data-anchor="page2" class = "section"> 
 	 			<div id="grid" data-columns>
 					<div class="column size-1of3">
-						<div class="height-1 tile" onclick="location.href='newurl.html'"> 
+						<div class="height-1 tile" onclick="location.href='refugee.html'"> 
 							<span class="across-bottom line blue" id="a1"></span>
 							<span class="up-right line blue" id="a2"></span>
 							<h1 class="underline-orange"> The Refugee Project </h1>  
 						</div>
-						<div class="height-2 tile"> 
+						<div class="height-2 tile" onclick="location.href='heartbeatvis.html'"> 
 							<span class="across-top line orange" id="b1"></span>
 							<span class="down-right line orange" id="b2"></span>
 							<h1 class="underline-blue"> Regularity &amp; Randomness </h1>
 						</div>
 					</div>
 					<div class="column size-1of3 item">
-						<div class="height-2 tile">
+						<div class="height-2 tile" onclick="location.href='interactiveVR.html'">
 							<span class="down-left line orange" id="c1"></span>
 							<span class="across-bottom line orange" id="c2"></span>
 							<span class="up-right line orange" id="c3"></span>
 							<h1 class="underline-blue"> Interactive WebVR Experiment </h1>
 						</div>
-						<div class="height-1 tile">
+						<div class="height-1 tile" onclick="location.href='vrdoodles.html'">
 							<span class="up-left line blue" id="d1"></span>
 							<span class="across-top line blue" id="d2"></span>
 							<span class="down-right line blue" id="d3"></span>
@@ -56,15 +55,15 @@
 						</div>
 					</div>
 					<div class="column size-1of3 item">
-						<div class="height-1 tile">
+						<div class="height-1 tile" onclick="location.href='comets.html'">
 							<span class="down-left line blue" id="e1"></span>
 							<span class="across-bottom line blue" id="e2"></span>
-							<h1 class="underline-orange"> Jell, Roll!</h1> 
+							<h1 class="underline-orange"> The Comets </h1> 
 						</div>
 						<div class="height-2 tile">
 							<span class="up-left line orange" id="f1"></span>
 							<span class="across-top line orange" id="f2"></span>
-							<h1 class="underline-blue"> Doodles! </h1> 
+							<h1 class="underline-blue"> Doodles! - coming soon </h1> 
 						</div>
 					</div>
 				</div>
@@ -75,14 +74,11 @@
    	<script src="/public/javascripts/d3/d3.min.js"></script>
    	<script src="public/javascripts/intro.js"></script> 
    	<script> 
-
 	   	$(document).ready(function() {
 		    $('#fullpage').fullpage({
 		    		anchors:['page1', 'page2','page3']
 		    	});
 
 		}); 
-
-
    	</script> 
  </html>
