--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 	 		</div> 
 	 		<div id="div3" data-anchor="page3" class="section"> 
 	 				<!-- lets keep with the line theme -->
-	 				<div id="intro-paragraph">hey.</div>  
+	 				<div id="intro-paragraph">
+
+	 					<div class="padding5"> 
+	 						Avika Narula is currently an undergraduate computer science student at New York University. She enjoys creative coding and likes to work with novel technologies. Creating animations with code brings her joy. She has worked with a vareity of softwares and libraries to bring her works to life. These include (but are not limited to) Processing, D3.js, Three.js, and CSS animations. This <a target="_blank" href= "/public/img/AvikaNarulaResume.pdf">link </a> will take you to her resume.
+	 					</div> 
+	 				 </div> 
+
 	 			<a href="#page3"> 
 	 				<div class = "arrow bounce arrow-svg"></div>  
 	 			</a>
