computer graphics assignment1

--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -1,8 +1,13 @@
 <!doctype html> 
 <html> 
-	<head> </head> 
+	<head> 
+		<link rel="stylesheet" type="text/css" href="public/css/cg.css">
+	</head> 
 
 	<body>
-		Hello
+		<div id="content"> 
+			 <h1> Computer Graphics </h1> 
+			 <a href="computer-graphics/assignment1/index.html"> Assignment #1 </a> 
+		 <div> 
 	</body>
 </html> 
