--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -8,6 +8,7 @@
 		<div id="content"> 
 			 <h1> Computer Graphics </h1> 
 			 <a href="computer-graphics/assignment1/index.html"> Assignment #1 </a> 
+			 <a href="computer-graphics/assignment2/index.html"> Assignment #2 </a> 
 		 <div> 
 	</body>
 </html> 
