--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -10,6 +10,8 @@
 			 <a href="computer-graphics/assignment1/index.html"> Assignment #1 </a> 
 			 <div> </div> 
 			 <a href="computer-graphics/assignment2/index.html"> Assignment #2 </a> 
+			 <div> </div> 
+			 <a href="computer-graphics/assignment3/index.html"> Assignment #3 </a> 
 		 <div> 
 	</body>
 </html> 
