--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -12,6 +12,8 @@
 			 <a href="computer-graphics/assignment2/index.html"> Assignment #2 </a> 
 			 <div> </div> 
 			 <a href="computer-graphics/assignment3/index.html"> Assignment #3 </a> 
+			 <div> </div> 
+			 <a href="computer-graphics/assignment4/index.html"> Assignment #4 </a> 
 		 <div> 
 	</body>
 </html> 
