--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -14,6 +14,8 @@
 			 <a href="computer-graphics/assignment3/index.html"> Assignment #3 </a> 
 			 <div> </div> 
 			 <a href="computer-graphics/assignment4/index.html"> Assignment #4 </a> 
+			 <div> </div> 
+			 <a href="computer-graphics/assignment5/index.html"> Assignment #5 </a> 
 		 <div> 
 	</body>
 </html> 
