add link to assignment 6

--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -16,6 +16,8 @@
 			 <a href="computer-graphics/assignment4/index.html"> Assignment #4 </a> 
 			 <div> </div> 
 			 <a href="computer-graphics/assignment5/index.html"> Assignment #5 </a> 
+			 <div> </div> 
+			 <a href="computer-graphics/assignment6/index.html"> Assignment #6 </a> 
 		 <div> 
 	</body>
 </html> 
