--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -17,7 +17,9 @@
 			 <div> </div> 
 			 <a href="computer-graphics/assignment5/index.html"> Assignment #5 </a> 
 			 <div> </div> 
-			 <a href="computer-graphics/assignment6/index.html"> Assignment #6 </a> 
+			 <a href="computer-graphics/assignment6/index.html"> Assignment #6 </a>
+			 <div> </div> 
+			 <a href="computer-graphics/assignment7/index.html"> Assignment #7 </a>  
 		 <div> 
 	</body>
 </html> 
