--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -20,6 +20,8 @@
 			 <a href="computer-graphics/assignment6/index.html"> Assignment #6 </a>
 			 <div> </div> 
 			 <a href="computer-graphics/assignment7/index.html"> Assignment #7 </a>  
+			 <div> </div> 
+			 <a href="computer-graphics/assignment7/index.html"> Assignment #8 </a>  
 		 <div> 
 	</body>
 </html> 
