--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -22,6 +22,8 @@
 			 <a href="computer-graphics/assignment7/index.html"> Assignment #7 </a>  
 			 <div> </div> 
 			 <a href="computer-graphics/assignment8/indexA.html"> Assignment #8 </a>  
+			 <div> </div> 
+			 <a href="computer-graphics/assignment9/index.html"> Assignment #9 </a>  
 		 <div> 
 	</body>
 </html> 
