--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -24,6 +24,8 @@
 			 <a href="computer-graphics/assignment8/indexA.html"> Assignment #8 </a>  
 			 <div> </div> 
 			 <a href="computer-graphics/assignment9/index.html"> Assignment #9 </a>  
+			 <div> </div> 
+			 <a href="computer-graphics/assignment10/index.html"> Assignment #10 </a>  
 		 <div> 
 	</body>
 </html> 
