--- a/computer-graphics.html
+++ b/computer-graphics.html
@@ -25,7 +25,9 @@
 			 <div> </div> 
 			 <a href="computer-graphics/assignment9/index.html"> Assignment #9 </a>  
 			 <div> </div> 
-			 <a href="computer-graphics/assignment10/index.html"> Assignment #10 </a>  
+			 <a href="computer-graphics/assignment10/index.html"> Assignment #10 </a> 
+			 <div> </div> 
+			 <a href="http://adisanarula.me/computer-graphics/adisa_narula_final/index.html"> Final Project | Worked with Adisa Narula. She put all the geometric shapes together and I was responsible for constructing the parametric shapes.  </a>  
 		 <div> 
 	</body>
 </html> 
