--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	 		<div id="div3" data-anchor="page3" class="section">
 	 			<div class="zindex"> 
 		 			<div id = "intro-paragraph"> 
-						Avika Narula is currently an undergraduate computer science student at New York University. She enjoys creative coding and likes to work with novel technologies. Creating animations with code brings her joy. She has worked with a vareity of softwares and libraries to bring her works to life. These include (but are not limited to) Processing, D3.js, Three.js, and CSS animations. This <a target="_blank" href= "/public/img/AvikaNarulaResume.pdf">link </a> will take you to her resume.
+						Hello! I'm Avika. I have recently moved back to Bangkok after living in NYC for 7 years. I graduated from NYU in 2017 and since I have been exploring different engineer positions at various companies. For my first gig out of college, I worked as a DevOps engineer at Blue Apron, a meal kit delivery service. I then moved to Butterfly Network. Butterfly Network makes wholebody ultrasound devices which works seamlessly with smart phones. There I first started as a DevOps engineer, but then went on to pursue my interest in iOS development. I am now back in my home city of Bangkok and am on the look out for freelance opportunities. Here is my <a target="_blank" href= "/public/img/AvikaNarulaResume.pdf"> resume </a>. You can also shoot me an <a href="mailto:hi@avika.co">email</a>. Scroll down to checkout my portfolio and some fun projects I have worked on in the past.
 					</div> 
 		 			<a href="#page3"> 
 		 				<div class = "arrow bounce arrow-svg"></div>  
@@ -31,7 +31,7 @@
 	 		</div> 
 	 		<div id="div2" data-anchor="page2" class = "section"> 
 	 			<div id="grid" data-columns>
-					<div class="column size-1of3">
+					<div class="column size-1of2">
 						<div class="height-1 tile" onclick="location.href='refugee.html'"> 
 							<span class="across-bottom line blue" id="a1"></span>
 							<span class="up-right line blue" id="a2"></span>
@@ -43,30 +43,18 @@
 							<h1 class="underline-blue"> Regularity &amp; Randomness </h1>
 						</div>
 					</div>
-					<div class="column size-1of3 item">
-						<div class="height-2 tile" onclick="location.href='interactiveVR.html'">
+					<div class="column size-1of2">
+						<div class="height-2 tile" onclick="location.href='ios.html'">
 							<span class="down-left line orange" id="c1"></span>
 							<span class="across-bottom line orange" id="c2"></span>
 							<span class="up-right line orange" id="c3"></span>
-							<h1 class="underline-blue"> Interactive WebVR Experiment </h1>
+							<h1 class="underline-blue"> Butterfly Network - iOS </h1>
 						</div>
-						<div class="height-1 tile" onclick="location.href='vrdoodles.html'">
+						<div class="height-1 tile" onclick="location.href='311-visualization.html'">
 							<span class="up-left line blue" id="d1"></span>
 							<span class="across-top line blue" id="d2"></span>
 							<span class="down-right line blue" id="d3"></span>
-							<h1 class="underline-orange"> WebVR Doodles </h1>
-						</div>
-					</div>
-					<div class="column size-1of3 item">
-						<div class="height-1 tile" onclick="location.href='311-visualization.html'">
-							<span class="down-left line blue" id="e1"></span>
-							<span class="across-bottom line blue" id="e2"></span>
 							<h1 class="underline-orange"> Catch Some Z's </h1> 
-						</div>
-						<div class="height-2 tile">
-							<span class="up-left line orange" id="f1"></span>
-							<span class="across-top line orange" id="f2"></span>
-							<h1 class="underline-blue"> Doodles! - coming soon </h1> 
 						</div>
 					</div>
 				</div>
