--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	 		<div id="div3" data-anchor="page3" class="section">
 	 			<div class="zindex"> 
 		 			<div id = "intro-paragraph"> 
-						Hello! I'm Avika. I have recently moved back to Bangkok after living in NYC for 7 years. I graduated from NYU in 2017 and since I have been exploring different engineer positions at various companies. For my first gig out of college, I worked as a DevOps engineer at Blue Apron, a meal kit delivery service. I then moved to Butterfly Network. Butterfly Network makes handheld ultrasound devices which works seamlessly with smart phones. There I first started as a DevOps engineer, but then went on to pursue my interest in iOS development. I am now back in my home city of Bangkok and am on the look out for freelance opportunities. Here is my <a target="_blank" href= "/public/img/AvikaNarulaResume.pdf"> resume </a>. You can also shoot me an <a href="mailto:hi@avika.co">email</a>. Scroll down to checkout my portfolio and some fun projects I have worked on in the past.
+						Hello! I'm Avika. I have recently moved back to Bangkok after living in NYC for 7 years. I graduated from NYU in 2017 and since I have been exploring different engineer positions at various companies. For my first gig out of college, I worked as a DevOps engineer at <a href="https://blueapron.com" target="_blank"> Blue Apron </a>, a meal kit delivery service. I then moved to <a href="https://butterflynetwork.com" target="_blank">Butterfly Network</a>. Butterfly Network makes handheld ultrasound devices which works seamlessly with smart phones. There I first started as a DevOps engineer, but then went on to pursue my interest in iOS development. I am now back in my home city of Bangkok and am on the look out for freelance opportunities. Here is my <a target="_blank" href= "/public/img/AvikaNarulaResume.pdf"> resume</a>. You can also shoot me an <a href="mailto:hi@avika.co">email</a>. Scroll down to checkout my portfolio and some fun projects I have worked on in the past.
 					</div> 
 		 			<a href="#page3"> 
 		 				<div class = "arrow bounce arrow-svg"></div>  
@@ -32,10 +32,11 @@
 	 		<div id="div2" data-anchor="page2" class = "section"> 
 	 			<div id="grid" data-columns>
 					<div class="column size-1of2">
-						<div class="height-1 tile" onclick="location.href='refugee.html'"> 
+						<div class="height-1 tile" onclick="location.href='ios.html'"> 
+							<span class="down-left line blue"> </span>
 							<span class="across-bottom line blue" id="a1"></span>
 							<span class="up-right line blue" id="a2"></span>
-							<h1 class="underline-orange"> The Refugee Project </h1>  
+							<h1 class="underline-orange"> Butterfly Network - iOS </h1>  
 						</div>
 						<div class="height-2 tile" onclick="location.href='heartbeatvis.html'"> 
 							<span class="across-top line orange" id="b1"></span>
@@ -44,11 +45,11 @@
 						</div>
 					</div>
 					<div class="column size-1of2">
-						<div class="height-2 tile" onclick="location.href='ios.html'">
+						<div class="height-2 tile" onclick="location.href='refugee.html'">
 							<span class="down-left line orange" id="c1"></span>
 							<span class="across-bottom line orange" id="c2"></span>
 							<span class="up-right line orange" id="c3"></span>
-							<h1 class="underline-blue"> Butterfly Network - iOS </h1>
+							<h1 class="underline-blue"> Data Visualization </h1>
 						</div>
 						<div class="height-1 tile" onclick="location.href='311-visualization.html'">
 							<span class="up-left line blue" id="d1"></span>
