--- a/ios.html
+++ b/ios.html
@@ -20,7 +20,7 @@
                         <h1> Butterfly Network - iOS </h1> 
                     </div> 
                     <div id = "description"> 
-                        I worked as an iOS engineer at <a href="https://www.butterflynetwork.com"> Butterfly Network </a>for over a year. Butterfly Network makes handheld portable ultrasound devices that plug into iPhones and iPads. This makes the iOS app an integral part of the business. I worked with product and clinical partners to bring the veterinarian and enterprise offering to the market, amongst other things. I thoroughly enjoyed my time working there as an iOS engineer. Scroll down to get a glimpse of the app. To read more about my experience check out my <a target="_blank" href= "/public/img/AvikaNarulaResume.pdf"> resume </a>.
+                        I worked as an iOS engineer at <a href="https://www.butterflynetwork.com" target="_blank"> Butterfly Network </a>for over a year. Butterfly Network makes handheld portable ultrasound devices that plug into iPhones and iPads. This makes the iOS app an integral part of the business. I worked with product and clinical partners to bring the veterinarian and enterprise offering to the market, amongst other things. I thoroughly enjoyed my time working there as an iOS engineer. Scroll down to get a glimpse of the app. To read more about my experience check out my <a target="_blank" href= "/public/img/AvikaNarulaResume.pdf"> resume</a>.
                    </div> 
                     <a href="#page3"> 
                         <div class = "arrow bounce arrow-svg"></div>  
